Fixed issues on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -33,14 +33,13 @@
 
 body
 {
-	padding-top: 2.6em;
+	padding-top: 5rem;
 	margin: 0;
-	font-size: 0.4cm;
+	font-size: 1.8rem;
 	font-family: "Libertinus Serif", serif;
 	color: #333;
-	width: calc(500/9)vw;
+	width: 100vw;
 	overflow-x: hidden;
-	zoom: calc(9/5);
 	text-align: justify;
 }
 
@@ -65,29 +64,29 @@ nav
 	position: fixed;
 	top: 0;
 	width: 100%;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	gap: 0.5em;
+	gap: 1rem;
 	background: #d57fd5;
 	border-bottom: #333 solid;
-	height: 2.6em;
-	max-height: 2.6em;
+	height: 5rem;
+	max-height: 5rem;
 	overflow-y: hidden;
 }
 
-@media(max-width: 767px) {
+@media(max-width: 962px) {
 	body
 	{
-		padding-top: 5.2em;
+		padding-top: 10rem;
 	}
 	nav
 	{
-		height: 5.2em;
-		max-height: 5.2em;
+		height: 10rem;
+		max-height: 10rem;
 	}
 }
 
@@ -96,12 +95,12 @@ nav a
 	display: block;
 	background-color: white;
 	border-style: solid;
-	border-width: 0.1em;
+	border-width: 0.2rem;
 	border-color: #333;
-	border-radius: 0.5em;
-	padding: 0.5em;
-	padding-bottom: 0.25em;
-	height: 1.5em;
+	border-radius: 1rem;
+	padding: 1rem;
+	padding-bottom: 0.5rem;
+	height: 3rem;
 	text-wrap: nowrap;
 	text-align: center;
 	color: #333;
@@ -126,35 +125,36 @@ header
 	width: 100%;
 	text-align: center;
 	background-color: #810081;
-	padding-top: 1.5em;
-	padding-bottom: 1em;
-	font-size: 1.5em;
+	padding-top: 3rem;
+	padding-bottom: 2rem;
+	font-size: 3rem;
 	color: white;
 	border-bottom: #333 solid;
-	text-shadow: 0 0 0.1em black;
+	text-shadow: 0 0 0.2rem black;
 }
 
 header img
 {
-	max-height: 5em;
+	max-height: 10rem;
+	height: 10rem;
 }
 
 main
 {
-	max-width: 45em;
+	max-width: 90rem;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 0.5em 1em;
+	padding: 1rem 2rem;
 }
 
 .post-header
 {
 	width: 100%;
-	height: 5em;
+	height: 10rem;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	padding-top: 1em;
+	padding-top: 2rem;
 	align-content: space-between;
 }
 
@@ -165,7 +165,7 @@ main
 
 .post
 {
-	padding-bottom: 1em;
+	padding-bottom: 2rem;
 }
 
 .post a
@@ -193,7 +193,7 @@ main
 
 .date
 {
-	font-size: 0.8em;
+	font-size: 1.2rem;
 	color: #777;
 }
 
@@ -206,18 +206,18 @@ main
 {
 	display: flex;
 	justify-content: flex-end;
-	gap: 0.5em;
+	gap: 1rem;
 }
 
 .tag
 {
 	background-color: #d57fd5;
 	border-color: #333;
-	border-width: 0.1em;
-	border-radius: 0.5em;
+	border-width: 0.2rem;
+	border-radius: 1rem;
 	border-style: solid;
-	padding: 0.25em;
-	font-size: 0.8em;
+	padding: 0.5rem;
+	font-size: 1.5rem;
 	color: #333;
 	text-decoration: none;
 }
@@ -230,7 +230,7 @@ main
 h2:has(.tag)
 {
 	display: inline-block;
-	margin: 0.25em;
+	margin: 0.5rem;
 }
 
 .more
@@ -238,13 +238,13 @@ h2:has(.tag)
 	text-align: center;
 	display: block;
 	max-width: fit-content;
-	padding: 0.25em 0.5em;
+	padding: 0.5rem 1rem;
 	margin-left: auto;
 	margin-right: auto;
 	border-color: #333;
-	border-width: 0.1em;
+	border-width: 0.2rem;
 	border-style: solid;
-	border-radius: 0.5em;
+	border-radius: 1rem;
 	color: #333;
 	text-decoration: none;
 }
@@ -267,14 +267,14 @@ h2:has(.tag)
 .block-typst
 {
 	text-align: center;
-	padding: 1em;
+	padding: 2rem;
 }
 
 footer
 {
 	width: 100%;
 	text-align: center;
-	font-size: 0.6em;
+	font-size: 1rem;
 	color: #777;
-	padding: 1em 0;
+	padding: 2rem 0;
 }
